    UnknownHost resolves to an IP address. (Ivan Mitic via suresh)

    HADOOP-10664. TestNetUtils.testNormalizeHostName fails. (atm)

    HADOOP-10656. The password keystore file is not picked by LDAP group mapping
    (brandonli)

    HADOOP-10622. Shell.runCommand can deadlock (Gera Shegalov via jlowe)

    HADOOP-10686. Writables are not always configured. 
    (Abraham Elmahrek via kasha)

  BREAKDOWN OF HADOOP-10514 SUBTASKS AND RELATED JIRAS

    HADOOP-10520. Extended attributes definition and FileSystem APIs for
    extended attributes. (Yi Liu via wang)

    HADOOP-10546. Javadoc and other small fixes for extended attributes in
    hadoop-common. (Charles Lamb via wang)

    HADOOP-10521. FsShell commands for extended attributes. (Yi Liu via wang)

    HADOOP-10548. Improve FsShell xattr error handling and other fixes. (Charles Lamb via umamahesh)

    HADOOP-10567. Shift XAttr value encoding code out for reuse. (Yi Liu via umamahesh)

    HADOOP-10621. Remove CRLF for xattr value base64 encoding for better display.(Yi Liu via umamahesh)

    HADOOP-10575. Small fixes for XAttrCommands and test. (Yi Liu via umamahesh)

    HADOOP-10561. Copy command with preserve option should handle Xattrs.
    (Yi Liu via cnauroth)

Release 2.4.1 - UNRELEASED

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

    HADOOP-10466. Lower the log level in UserGroupInformation.  (Nicolas
    Liochon via szetszwo)

  OPTIMIZATIONS

  BUG FIXES 

    HADOOP-10455. When there is an exception, ipc.Server should first check
    whether it is an terse exception.  (szetszwo)

    HADOOP-10456. Bug in Configuration.java exposed by Spark
    (ConcurrentModificationException).  (Nishkam Ravi via cnauroth)

    HADOOP-10473. TestCallQueueManager should interrupt before counting calls.
    (szetszwo)

    HADOOP-10490. TestMapFile and TestBloomMapFile leak file descriptors.
    (cnauroth)

    HADOOP-10522. JniBasedUnixGroupMapping mishandles errors. (kihwal)
